@@ -63,7 +63,7 @@ xcoff64_core_p (abfd)
     goto xcoff64_core_p_error;
 
   if (sizeof (struct core_dumpxx) 
-      != bfd_read (&core, sizeof (struct core_dumpxx), 1, abfd))
+      != bfd_bread (&core, sizeof (struct core_dumpxx), abfd))
     goto xcoff64_core_p_error;
 
   if (bfd_stat (abfd, &statbuf) < 0) 
@@ -172,7 +172,7 @@ xcoff64_core_p (abfd)
 	return return_value;
 
       if (sizeof (struct __ld_info64) !=
-	  bfd_read (&ldinfo, sizeof (struct __ld_info64), 1, abfd)) 
+	  bfd_bread (&ldinfo, sizeof (struct __ld_info64), abfd)) 
 	return return_value;
 
       if (ldinfo.ldinfo_core) 
@@ -200,7 +200,7 @@ xcoff64_core_p (abfd)
 
       for (i = 0; i < core.c_vmregions; i++) 
 	if (sizeof (struct vm_infox) !=
-	    bfd_read (&vminfo, sizeof (struct vm_infox), 1, abfd)) 
+	    bfd_bread (&vminfo, sizeof (struct vm_infox), abfd)) 
 	  return return_value;
 
       if (vminfo.vminfo_offset) 
@@ -243,7 +243,7 @@ xcoff64_core_file_matches_executable_p (core_bfd, exec_bfd)
     return return_value;
 	
   if (sizeof (struct core_dumpxx) !=
-      bfd_read (&core, sizeof (struct core_dumpxx), 1, core_bfd)) 
+      bfd_bread (&core, sizeof (struct core_dumpxx), core_bfd)) 
     return return_value;
 
   if (bfd_seek (core_bfd, core.c_loader, SEEK_SET) != 0) 
@@ -258,7 +258,7 @@ xcoff64_core_file_matches_executable_p (core_bfd, exec_bfd)
 
   while (1)
     {
-      if (bfd_read (s, 1, 1, core_bfd) != 1)
+      if (bfd_bread (s, 1, core_bfd) != 1)
 	goto xcoff64_core_file_matches_executable_p_end_1;
 
       if (*s == '\0')
